Updated legacy names.

--- a/bsct/templates/bsct/plain/form.html
+++ b/bsct/templates/bsct/plain/form.html
@@ -1,6 +1,6 @@
 {% extends 'bsct/base.html' %}
  
-{% load bsttags %}
+{% load bscttags %}
 
 {% block BSCT_CONTENT %}
 <h2> Create {% get_verbose_name form.instance %} </h2>
