--- a/bsct/templates/bsct/plain/list.html
+++ b/bsct/templates/bsct/plain/list.html
@@ -1,6 +1,6 @@
 {% extends 'bsct/base.html' %}
 
-{% load bsttags %}
+{% load bscttags %}
  
 {% block BSCT_CONTENT %}
 <table class = 'table table-striped'>
