--- a/demo/crud/templates/base.html
+++ b/demo/crud/templates/base.html
@@ -76,5 +76,10 @@
 
     </div>
 
+  <hr>
+  <footer>
+    <p>&copy; <a href='http://cidola.com'>Cidola</a> 2013 </p>
+  </footer>
+
 </body>
 </html>
