--- a/demo/crud/templates/base.html
+++ b/demo/crud/templates/base.html
@@ -38,7 +38,7 @@
           <a class="brand" href="#">Django Bootstrap CRUD Templates</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="{% url 'widgets' %}">Home</a></li>
+              <li class="active"><a href="{% url 'widget_list' %}">Home</a></li>
             </ul>
           </div>
         </div>
@@ -54,7 +54,8 @@
       
       <div class = 'help' >
         <h2> A Demonstration </h2>
-        This is a demonstration of django-bootstrap-templates.
+        This is a demonstration of the Django Python package 
+        <br/>
         Please note that the database is reloaded every five minutes. 
 
         <h3>The work involved</h3>
