Added title blocks, paginator template, and pagination helper templetag.

--- a/bsct/templates/bsct/base.html
+++ b/bsct/templates/bsct/base.html
@@ -2,11 +2,11 @@
 
 {% load bscttags %}
 
-{% block BSCT_MAIN %}
+{% block BSCT_CSS %}
+{% bootstrap_cdn %}
+{% endblock %}
 
-    {% block BSCT_BOOTSTRAP_CDN %}
-    {% bootstrap_cdn %}
-    {% endblock %}
+{% block BSCT_MAIN %}
 
     {% block BSCT_CONTENT %}
     {% endblock %}
