--- a/bsct/templates/bsct/plain/detail.html
+++ b/bsct/templates/bsct/plain/detail.html
@@ -3,9 +3,12 @@
 {% load bscttags %}
 
 {% block BSCT_CONTENT %}
+
+{% block BSCT_TITLE %}
 <h2>
     {{object}}
 </h2>
+{% endblock %}
 
 {% block BSCT_DETAIL_FIELDS %}
 <table class = 'table table-condensed' >
