--- a/bsct/templates/bsct/plain/list.html
+++ b/bsct/templates/bsct/plain/list.html
@@ -51,14 +51,7 @@
 {% endblock %}
 
 {% block BSCT_LIST_PAGINATION %}
-<div class = 'span4'>
-{% if page_obj.has_previous %}
-    <a class = 'btn btn-info' href="?page={{ page_obj.previous_page_number}}"> Previous</a>
-{% endif %}
-{% if page_obj.has_next %}
-    <a class = 'btn btn-info' href="?page={{ page_obj.next_page_number}}"> Next</a>
-{% endif %}
-</div>
+{% include 'bsct/plain/paginator.html' %}
 {% endblock %}
 
 </div>
