--- a/demo/crud/templates/base.html
+++ b/demo/crud/templates/base.html
@@ -23,7 +23,10 @@
         g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s);
       })();
     </script>
-    <!-- End Piwik Code -->k
+    <!-- End Piwik Code -->
+
+    {% block BSCT_CSS %}
+    {% endblock %}
 
 </head>
 
