Updated default Bootstrap version to 3.1.1; Updated demo CSS for Bootstrap 3.1.1 compatiblity

--- a/bsct/templates/bsct/plain/form.html
+++ b/bsct/templates/bsct/plain/form.html
@@ -35,7 +35,7 @@
 
         {% if form.instance.get_list_url %}
             <a 
-                class = 'btn'
+                class = 'btn btn-default'
                 href  = '{{form.instance.get_list_url}}'
             >
                 Back
