--- a/bsct/templates/bsct/plain/detail.html
+++ b/bsct/templates/bsct/plain/detail.html
@@ -66,7 +66,7 @@
 
 {% if object.get_list_url %}
     <a 
-        class = 'btn'
+        class = 'btn btn-default'
         href  = '{{ object.get_list_url }}'
     >
         Listing
