--- a/demo/crud/templates/base.html
+++ b/demo/crud/templates/base.html
@@ -7,6 +7,7 @@
 
     <style>
         input { min-height: 1.8em; } 
+        body { padding-top: 50px; }
     </style> 
 
     <!-- Piwik -->
@@ -32,18 +33,10 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">Django Bootstrap CRUD Templates</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="{% url "widget_list" %}">Home</a></li>
-            </ul>
-          </div>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Django Bootstrap CRUD Templates</a>
         </div>
       </div>
     </div>
@@ -57,7 +50,7 @@
       
       <div class = 'help' >
         <h2> A Demonstration </h2>
-        This is a demonstration of the Django Python package 
+        This is a demonstration of the Django Python package django-bootstrap-crud-templates.
         <br/>
         Please note that the database is reloaded every five minutes. 
 
