Add get_allowed_fields for limiting model field CRUD exposure; get_list_url now instance method vs. class; change CDN methods to srcs not scripts; Should work with django > 1.6

--- a/bsct/templates/bsct/base.html
+++ b/bsct/templates/bsct/base.html
@@ -3,7 +3,7 @@
 {% load bscttags %}
 
 {% block BSCT_CSS %}
-{% bootstrap_cdn %}
+<link href='{% bootstrap_cdn %}' rel='stylesheet' type='text/css'/>
 {% endblock %}
 
 {% block BSCT_MAIN %}
