--- a/demo/crud/templates/base.html
+++ b/demo/crud/templates/base.html
@@ -50,30 +50,11 @@
       
       <div class = 'help' >
         <h2> A Demonstration </h2>
-        This is a demonstration of the Django Python package 
-        django-bootstrap-crud-templates.
+        This is a demonstration of the Django Python package django-bootstrap-crud-templates.
         <br/>
         Please note that the database is reloaded every five minutes. 
-
-        <h3>The work involved</h3>
-        Each page is generated automatically, requiring only the
-        definition of a few model attributes and urls.
-
-        <div class=''>
-            <div class=''>
-                <h4>models.py</h4>
-                <pre>{% with project_root|add:"/crud/models.py" as models %}{% ssi models %} {% endwith %}</pre>
-            </div>
-            <div class=''>
-                <h4>urls.py</h4>
-                <pre>{% with ""|add:project_root|add:"/crud/urls.py" as urls %}{% ssi urls %} {% endwith %}</pre>
-            </div>
-        </div>
-
       </div>
-
     </div>
-
   <hr>
   <footer>
     <p>&copy; <a href='http://cidola.com'>Cidola</a> 2013 </p>
